@@ -464,12 +464,12 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   <span
                     aria-hidden="true"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                   <span
                     class="screen-reader-text"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                 </th>
               </tr>
@@ -1195,12 +1195,12 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   <span
                     aria-hidden="true"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                   <span
                     class="screen-reader-text"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                 </th>
               </tr>
@@ -2535,12 +2535,12 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   <span
                     aria-hidden="true"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                   <span
                     class="screen-reader-text"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                 </th>
               </tr>
@@ -3294,12 +3294,12 @@ exports[`Transactions list when not filtered by deposit renders correctly 1`] = 
                   <span
                     aria-hidden="true"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                   <span
                     class="screen-reader-text"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                 </th>
               </tr>
@@ -4040,12 +4040,12 @@ exports[`Transactions list when not filtered by deposit renders table summary on
                   <span
                     aria-hidden="true"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                   <span
                     class="screen-reader-text"
                   >
-                    Deposit
+                    Deposit date
                   </span>
                 </th>
               </tr>
